JT-11092 - fix account wrapping to new line

--- a/app/assets/stylesheets/gs_v2/header/_header.scss
+++ b/app/assets/stylesheets/gs_v2/header/_header.scss
@@ -853,7 +853,7 @@ $nav_font_color: #F0F0F0;
     }
   }
   .buffer {
-    margin: 0 24em;
+    margin: 0 22em;
   }
   .navigation {
     padding: 0px !important;
